[Java] change package structure